--- a/크롬 앱/2강.md
+++ b/크롬 앱/2강.md
@@ -2,11 +2,13 @@
 * __```prompt()```__   
    * 브라우저 창에서 입력창을 띄워줌   
    
-   * 2개의 argument - message(문자), default   
+   * 2개의 argument - message(문자, string), default   
 
 __ex>__
 ```
 const age = prompt("How old are you?");
 
 console.log(age);
+
+console.log(typeof age);  // string
 ```
