--- a/크롬 앱/2강.md
+++ b/크롬 앱/2강.md
@@ -12,3 +12,9 @@ console.log(age);
 
 console.log(typeof age);  // string
 ```
+
+<br>
+
+### 2-14.
+* __```isNaN()```__  
+   * number인지 판별해주는 함수  
