--- a/크롬 앱/2강.md
+++ b/크롬 앱/2강.md
@@ -17,4 +17,12 @@ console.log(typeof age);  // string
 
 ### 2-14.
 * __```isNaN()```__  
+
    * number인지 판별해주는 함수  
+
+__ex>__
+```
+const age = prompt("How old are you?");
+
+console.log(isNaN(age));  // true 또는 false
+```
