--- a/크롬 앱/3강.md
+++ b/크롬 앱/3강.md
@@ -1,2 +1,12 @@
 ### 3-1.
-* __HTML__: 
+* __JavaScript__
+   * HTML의 document 정보를 읽어오는데, document는 객체(object)로 구성되어 있음   
+
+   * 객체이므로, 객체의 속성(properties)을 가져오거나 변경할 수 있음   
+
+__ex>__   
+```
+document.title  // HTML에 적어둔 제목을 불러옴
+
+
+```
