--- a/크롬 앱/3강.md
+++ b/크롬 앱/3강.md
@@ -10,3 +10,22 @@ document.title  // HTML에 적어둔 제목을 불러옴
 
 document.title = "변경할 제목";
 ```
+
+<br>
+
+* __```console.dir()```__ vs __```console.log()```__   
+
+   * __dir 함수__: 객체의 속성을 계층 구조로 출력
+
+   * __log 함수__: 태그 내용 출력
+
+__ex>__   
+```
+console.dir(document);   // HTML 속성 출력
+
+console.log(document);   // HTML 내용 출력
+```
+
+<br>
+◇ 참고 자료   
+: https://jongbeom-dev.tistory.com/115
