--- a/크롬 앱/3강.md
+++ b/크롬 앱/3강.md
@@ -28,4 +28,19 @@ console.log(document);   // HTML 내용 출력
 
 <br>
 ◇ 참고 자료   
-: https://jongbeom-dev.tistory.com/115
+: https://jongbeom-dev.tistory.com/115   
+
+<br>
+<br>
+<hr>
+
+### 3-1.   
+#### (1) __```.getElementById("")```__   
+__ex>__
+```
+const title = document.getElementById("title");
+console.log(title);
+
+// 출력
+<h1 id="title">Grab me!</h1>
+```
