--- a/크롬 앱/3강.md
+++ b/크롬 앱/3강.md
@@ -36,6 +36,8 @@ console.log(document);   // HTML 내용 출력
 
 ### 3-1.   
 #### (1) __```.getElementById("")```__   
+* id를 통해 element를 찾게 해주는 함수   
+
 __ex>__
 ```
 const title = document.getElementById("title");
@@ -44,3 +46,101 @@ console.log(title);
 // 출력
 <h1 id="title">Grab me!</h1>
 ```
+
+<br>
+
+### 3-2.   
+#### (1) __```.getElementByClassName()```__
+* class 이름으로 element 가져오기   
+
+   * array로 출력
+
+__ex>__
+```
+  // 다음과 같은 경우 (HTML)
+  <div class="hello">
+      <h1 id="title">Grab me!</h1>
+      <h1>Nice to meet ya!</h1>
+  </div>
+  
+  // JS
+  const title = document.getElementsByClassName("hello");
+  console.log(title);
+  
+  // 출력
+  [div.hello]
+```
+
+<br>
+
+#### (1-2) __```.getElementsByTagName()```__
+* tag : anchor, div, selection, button   
+
+* tag안의 elements를 가져옴   
+
+   * array로 출력
+   
+__ex>__
+```
+  // 다음과 같은 경우 (HTML)
+  <div class="hello">
+      <h1 id="title">Grab me!</h1>
+      <h1>Nice to meet ya!</h1>
+  </div>
+  
+  // JS
+  const title = document.getElementsByTagName("h1");
+  console.log(title);
+  
+  // 출력
+  [h1#title, h1, title: h1#title]
+```
+
+<br>
+
+#### (1-3) __★ ```.querySelector()``` ★__   
+* element를 css element로 검색하는 함수   
+
+* 단 하나의 element를 찾아 줌   
+
+__ex1>__
+```
+  // JS
+  const title = document.querySelector(".hello h1");
+  console.log(title);
+  
+  // 출력
+  <h1 id="title">Grab me!</h1>
+```
+
+<br>
+
+__ex2>__: id로 검색하기
+```
+// 서로 동일한 코드
+const title = document.querySelector("#hello");
+const title = document.getElementById("hello");
+
+console.log(title);
+```
+
+<br>
+
+#### (1-4) __★ ```.querySelectorAll()``` ★__   
+* element를 css 방식으로 검색하는 함수   
+
+   * 모든 element를 출력   
+
+__ex>__
+```
+  // JS
+  const title = document.querySelectorAll(".hello h1");
+  console.log(title);
+  
+  // 출력
+  [h1#title, h1#title]
+```
+
+<br>
+<br>
+<hr>
