--- a/크롬 앱/3강.md
+++ b/크롬 앱/3강.md
@@ -144,3 +144,44 @@ __ex>__
 <br>
 <br>
 <hr>
+
+### 3-3.
+#### (1) ```<h1></h1>``` 색깔 바꾸기   
+__ex>__
+```
+  // HTML
+  <div class="hello">
+      <h1>Grab me!</h1>
+  </div>
+  
+  // JS
+  const title = document.querySelector(".hello h1");
+  console.dir(title);
+
+  title.style.color = "blue";
+  
+  // 출력
+  Grab me!가 파란색으로 바뀜
+```
+
+<br>
+
+#### (2) click event   
+* __event__: 클릭, 마우스를 가져다두기, 입력 끝내기, Enter 누르기 등   
+
+* __```.addEventListener()```__   
+
+   * 유저들의 event를 확인할 수 있는 함수   
+
+__ex>__
+```
+  const title = document.querySelector("div.hello:first-child h1");
+
+  function handleTitleClick() {
+      console.log("Title was clicked!");
+  }
+
+  title.addEventListener("click", handleTitleClick);  // title를 클릭할 경우, 다음 함수가 실행됨
+```
+
+<br>
