--- a/크롬 앱/3강.md
+++ b/크롬 앱/3강.md
@@ -1,4 +1,4 @@
-### 3-0.
+## 3-0.
 * __JavaScript__
    * HTML의 document 정보를 읽어오는데, document는 객체(object)로 구성되어 있음   
 
@@ -34,7 +34,7 @@ console.log(document);   // HTML 내용 출력
 <br>
 <hr>
 
-### 3-1.   
+## 3-1.   
 #### (1) __```.getElementById("")```__   
 * id를 통해 element를 찾게 해주는 함수   
 
@@ -49,8 +49,8 @@ console.log(title);
 
 <br>
 
-### 3-2.   
-#### (1) __```.getElementByClassName()```__
+## 3-2.   
+### (1) __```.getElementByClassName()```__
 * class 이름으로 element 가져오기   
 
    * array로 출력
@@ -73,7 +73,7 @@ __ex>__
 
 <br>
 
-#### (1-2) __```.getElementsByTagName()```__
+### (1-2) __```.getElementsByTagName()```__
 * tag : anchor, div, selection, button   
 
 * tag안의 elements를 가져옴   
@@ -98,7 +98,7 @@ __ex>__
 
 <br>
 
-#### (1-3) __★ ```.querySelector()``` ★__   
+### (1-3) __★ ```.querySelector()``` ★__   
 * element를 css element로 검색하는 함수   
 
 * 단 하나의 element를 찾아 줌   
@@ -126,7 +126,7 @@ console.log(title);
 
 <br>
 
-#### (1-4) __★ ```.querySelectorAll()``` ★__   
+### (1-4) __★ ```.querySelectorAll()``` ★__   
 * element를 css 방식으로 검색하는 함수   
 
    * 모든 element를 출력   
@@ -145,8 +145,8 @@ __ex>__
 <br>
 <hr>
 
-### 3-3.
-#### (1) ```<h1></h1>``` 색깔 바꾸기   
+## 3-3.
+### (1) ```<h1></h1>``` 색깔 바꾸기   
 __ex>__
 ```
   // HTML
@@ -166,14 +166,14 @@ __ex>__
 
 <br>
 
-#### (2) click event   
+### (2) click event   
 * __event__: 클릭, 마우스를 가져다두기, 입력 끝내기, Enter 누르기 등   
 
 * __```.addEventListener()```__   
 
    * 유저들의 event를 확인할 수 있는 함수   
 
-__ex>__
+__ex1>__
 ```
   const title = document.querySelector("div.hello:first-child h1");
 
@@ -185,3 +185,81 @@ __ex>__
 ```
 
 <br>
+
+__ex2>__: 클릭하면 색깔이 바뀜   
+```
+  const title = document.querySelector("div.hello:first-child h1");
+
+  function handleTitleClick() {
+      title.style.color = "blue";
+  }
+
+  title.addEventListener("click", handleTitleClick);
+```
+
+<br>
+<br>
+<hr>
+
+## 3-4.
+### 1) event 찾는법
+#### (1) 구글 검색   
+* 검색 경로
+: ```h1 html element mdn  →  HTMLHeadingElement - Web APIs | MDN  →  Element 또는 HTML Element```
+
+* url
+: https://developer.mozilla.org/en-US/docs/Web/API/HTMLHeadingElement
+
+<br>
+
+#### (2) ```console.dir()```   
+```
+  // JS
+  const title = document.querySelector("div.hello:first-child h1");
+
+  console.dir(title);
+
+  // 콘솔창
+  h1에서 on이 붙은 것 = event listener
+```
+
+<br>
+<hr>
+
+### 2) mouse enter / leave 이벤트   
+* title에 마우스를 가져만 두어도 인식함   
+
+__ex1>__
+```
+  const title = document.querySelector("div.hello:first-child h1");
+
+  function handleMouseEnter() {
+      console.log("Mouse is here");
+  }
+
+  title.addEventListener("mouseenter", handleMouseEnter)
+```
+
+<br>
+
+__ex2>__
+```
+  const title = document.querySelector("div.hello:first-child h1");
+
+  function handleMouseEnter() {
+      title.innerText = "Mouse is here";
+  }
+
+  function handleMouseLeave() {
+      title.innerText = "Mouse is gone";
+  }
+
+  title.addEventListener("mouseenter", handleMouseEnter);
+  title.addEventListener("mouseleave", handleMouseLeave);
+```
+
+<br>
+<br>
+<hr>
+
+## 2-5.
