--- a/크롬 앱/3강.md
+++ b/크롬 앱/3강.md
@@ -263,3 +263,30 @@ __ex2>__
 <hr>
 
 ## 2-5.
+### 1) eventListener 입력 / 제거
+__ex>__: 두 가지 입력 방식
+```
+  title.addEventListener("click", handleTitleClick);
+
+  title.onclick = handleTitleClick;
+```
+
+
+* addEventListener의 장점
+
+   * 나중에 .removeEventListener로 제거할 수 있음
+
+<br>
+
+### 2) Window 이벤트
+* url: https://developer.mozilla.org/ko/docs/Web/API/Window
+
+* document처럼 JS에서 기본적으로 제공   
+
+<br>
+
+#### (1) resize   
+__ex>__
+```
+
+```
