--- a/크롬 앱/3강.md
+++ b/크롬 앱/3강.md
@@ -286,7 +286,50 @@ __ex>__: 두 가지 입력 방식
 <br>
 
 #### (1) resize   
+* 브라우저 창의 크기가 바뀌면 반응하는 event   
+
 __ex>__
 ```
+const h1 = document.querySelector("div.hello:first-child h1");
 
+function handleWindowResize() {
+    document.body.style.backgroundColor = "tomato";
+}
+
+window.addEventListener("resize", handleWindowResize);
 ```
+
+<br>
+
+#### (2) copy
+* 복사할 때 반응하는 event   
+
+__ex>__
+```
+function handleWindowCopy() {
+    alert("copier!");
+}
+
+window.addEventListener("copy", handleWindowCopy);
+```
+
+<br>
+
+#### (3) offline / online
+* 와이파이가 on/off 됨에 따라 반응하는 event   
+
+__ex>__
+```
+function handleWindowOffline() {
+    alert("SOS no WIFI");
+}
+
+function handleWindowOnline() {
+    alert("ALL GOOD");
+}
+
+window.addEventListener("offline", handleWindowOffline);
+window.addEventListener("online", handleWindowOnline);
+```
+
+<br>
