--- a/크롬 앱/3강.md
+++ b/크롬 앱/3강.md
@@ -290,13 +290,13 @@ __ex>__: 두 가지 입력 방식
 
 __ex>__
 ```
-const h1 = document.querySelector("div.hello:first-child h1");
+  const h1 = document.querySelector("div.hello:first-child h1");
 
-function handleWindowResize() {
-    document.body.style.backgroundColor = "tomato";
-}
+  function handleWindowResize() {
+      document.body.style.backgroundColor = "tomato";
+  }
 
-window.addEventListener("resize", handleWindowResize);
+  window.addEventListener("resize", handleWindowResize);
 ```
 
 <br>
@@ -306,11 +306,11 @@ window.addEventListener("resize", handleWindowResize);
 
 __ex>__
 ```
-function handleWindowCopy() {
-    alert("copier!");
-}
+  function handleWindowCopy() {
+      alert("copier!");
+  }
 
-window.addEventListener("copy", handleWindowCopy);
+  window.addEventListener("copy", handleWindowCopy);
 ```
 
 <br>
@@ -320,16 +320,38 @@ window.addEventListener("copy", handleWindowCopy);
 
 __ex>__
 ```
-function handleWindowOffline() {
-    alert("SOS no WIFI");
-}
+  function handleWindowOffline() {
+      alert("SOS no WIFI");
+  }
 
-function handleWindowOnline() {
-    alert("ALL GOOD");
-}
+  function handleWindowOnline() {
+      alert("ALL GOOD");
+  }
 
-window.addEventListener("offline", handleWindowOffline);
-window.addEventListener("online", handleWindowOnline);
+  window.addEventListener("offline", handleWindowOffline);
+  window.addEventListener("online", handleWindowOnline);
 ```
 
 <br>
+<br>
+<hr>
+
+## 3-6.
+### 1) 색깔 여러번 바꾸기 click event
+```
+  const h1 = document.querySelector("div.hello:first-child h1");
+
+  function handleTitleClick() {
+      const currentColor = h1.style.color;
+      let newColor;
+    
+      if(currentColor === "blue") {
+          newColor = "tomato";
+      } else {
+          newColor = "blue";
+      }
+      h1.style.color = newColor;  // h1 색깔에 적용하기 위해
+  }
+
+  h1.addEventListener("click", handleTitleClick);
+```
