--- a/크롬 앱/3강.md
+++ b/크롬 앱/3강.md
@@ -355,3 +355,35 @@ __ex>__
 
   h1.addEventListener("click", handleTitleClick);
 ```
+
+<br>
+<br>
+<hr>
+
+## 3-7.
+### 1) CSS에서 클래스 생성해서 event 넣기   
+* CSS   
+```
+// active라는 클래스 생성
+
+.active {
+    color: tomato;
+}
+```
+
+* JavaScript   
+```
+const h1 = document.querySelector("div.hello:first-child h1");
+
+function handleTitleClick() {
+    const clickedClass = "active";        // css의 .active와 동일
+
+    if (h1.className === clickedClass) {
+        h1.className = "";
+    } else {
+        h1.className = clickedClass;      // 클릭시 토마토 색깔로 변경
+    }
+}
+
+h1.addEventListener("click", handleTitleClick);
+```
