--- a/크롬 앱/3강.md
+++ b/크롬 앱/3강.md
@@ -362,28 +362,96 @@ __ex>__
 
 ## 3-7.
 ### 1) CSS에서 클래스 생성해서 event 넣기   
+
 * CSS   
 ```
-// active라는 클래스 생성
+  // active라는 클래스 생성
 
-.active {
-    color: tomato;
-}
+  .active {
+      color: tomato;
+  }
 ```
 
 * JavaScript   
 ```
-const h1 = document.querySelector("div.hello:first-child h1");
+  const h1 = document.querySelector("div.hello:first-child h1");
 
-function handleTitleClick() {
-    const clickedClass = "active";        // css의 .active와 동일
+  function handleTitleClick() {
+      const clickedClass = "active";        // css의 .active와 동일
 
-    if (h1.className === clickedClass) {
-        h1.className = "";
-    } else {
-        h1.className = clickedClass;      // 클릭시 토마토 색깔로 변경
-    }
-}
+      if (h1.className === clickedClass) {
+          h1.className = "";
+      } else {
+          h1.className = clickedClass;      // 클릭시 토마토 색깔로 변경
+      }
+  }
 
-h1.addEventListener("click", handleTitleClick);
+  h1.addEventListener("click", handleTitleClick);
+```
+
+<br>
+<br>
+<hr>
+
+## 3-8.
+### 1) classList   
+* className을 지우지 않고도 event 기능 적용   
+
+<br>
+
+### 1-2) 메소드
+#### (1) __```classList.contains()```__   
+
+__ex>__
+```
+  if (h1.classList.contains(clickedClass))
+  if (h1.className === clickedClass)
+```
+
+<br>
+
+#### (2) __```classList.remove()```__ & __```classList.add()```__   
+__ex>__
+```
+  // JS
+  const h1 = document.querySelector("div.hello:first-child h1");
+
+  function handleTitleClick() {
+      const clickedClass = "active";     // css의 .active와 동일
+
+      if (h1.classList.contains(clickedClass)) {
+          h1.classList.remove(clickedClass);
+      } else {
+          h1.classList.add(clickedClass);
+      }
+  }
+
+  h1.addEventListener("click", handleTitleClick);
+```
+
+<br>
+
+#### (3) __```classList.toggle()```__   
+__ex>__   
+```
+   * toggle
+     classList에 active 클래스가 있는지 확인
+     있다면 active 클래스 제거
+     없다면 active 클래스 추가
+     
+
+  // JS
+  const h1 = document.querySelector("div.hello:first-child h1");
+
+  function handleTitleClick() {
+      h1.classList.toggle("active");
+  }
+
+  h1.addEventListener("click", handleTitleClick);
+  
+  
+  // CSS
+  .active {
+      color: tomato;
+  }
 ```
