--- a/크롬 앱/4강.md
+++ b/크롬 앱/4강.md
@@ -15,3 +15,81 @@ localStorage.removeItem("username")
 
 ◇ 참고자료   
 : https://developer.mozilla.org/ko/docs/Web/API/Window/localStorage
+
+<br>
+<hr>
+<br>
+
+## 4-6.
+### 1. localStorage에 유저 정보가 있는지 체크
+
+#### index.html
+```
+<!DOCTYPE html>
+<html lang="en">
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <link rel="stylesheet" href="style.css" />
+    <title>Momentum App</title>
+  </head>
+  <body>
+    <form class="hidden" id="login-form">
+      <input
+        required
+        maxlength="15"
+        type="text"
+        placeholder="What is your name?"
+      />
+      <input type="submit" value="Log In" />
+    </form>
+
+    <h1 id="greeting"></h1>
+    <script src="app.js"></script>
+  </body>
+</html>
+```
+
+<br>
+
+#### style.css
+```
+.hidden {
+  display: none;
+}
+```
+
+<br>
+
+#### app.js
+```
+const loginForm = document.querySelector("#login-form");
+const loginInput = document.querySelector("#login-form input");
+const greeting = document.querySelector("#greeting");
+
+const HIDDEN_CLASSNAME = "hidden";
+
+function onLoginSubmit(e) {
+  e.preventDefault();
+
+  loginForm.classList.add(HIDDEN_CLASSNAME);
+  const username = loginInput.value;
+  localStorage.setItem("username", username);
+
+  paintGreeting(username);
+}
+
+function paintGreeting(username) {
+  greeting.innerText = `Hello ${username}`;
+  greeting.classList.remove(HIDDEN_CLASSNAME);
+}
+
+const savedUsername = localStorage.getItem("username");
+
+if (savedUsername === null) {  // localStorage에 유저명이 없을 때
+  loginForm.classList.remove(HIDDEN_CLASSNAME);
+  loginForm.addEventListener("submit", onLoginSubmit);
+} else {                       // localStorage에 유저명이 있을 때
+  paintGreeting(savedUsername);
+}
+```
