--- a/크롬 앱/4강.md
+++ b/크롬 앱/4강.md
@@ -24,7 +24,7 @@ localStorage.removeItem("username")
 ### 1. localStorage에 유저 정보가 있는지 체크
 
 #### index.html
-```
+```html
 <!DOCTYPE html>
 <html lang="en">
   <head>
@@ -53,7 +53,7 @@ localStorage.removeItem("username")
 <br>
 
 #### style.css
-```
+```css
 .hidden {
   display: none;
 }
@@ -62,7 +62,7 @@ localStorage.removeItem("username")
 <br>
 
 #### app.js
-```
+```js
 const loginForm = document.querySelector("#login-form");
 const loginInput = document.querySelector("#login-form input");
 const greeting = document.querySelector("#greeting");
