--- a/React 영화 웹 서비스/2강/2강.md
+++ b/React 영화 웹 서비스/2강/2강.md
@@ -1,4 +1,4 @@
-## React JS
+## 2강 : React JS
 1. React JS는 JS로 시작해 HTML에서 끝남
 2. React JS는 JS를 통해 element를 생성하고, 그걸 HTML로 옮김
    = React JS가 화면에 보여질 HTML을 컨트롤 할 수 있다
