--- a/React 영화 웹 서비스/3강/3강.md
+++ b/React 영화 웹 서비스/3강/3강.md
@@ -3,3 +3,6 @@
 - 리렌더링할 때, 이전에 렌더링된 컴포넌트를 체크해 바뀐 부분만 업데이트해준다.
 <br>
 2. state : 데이터를 저장해두는 곳
+
+2-1) setCounter(counter+1) : 직접 값을 설정해주는 것
+2-2) setCounter((current) => current+1) : 함수 전달하기
