--- a/React 영화 웹 서비스/4강/4강.md
+++ b/React 영화 웹 서비스/4강/4강.md
@@ -1,2 +1,21 @@
 ## 4강 : Props
-1. shortcut
+1. shortcut   
+* 일반적인 props 방법   
+```
+function Btn(props) {
+  return (
+    <button>{props.text}</button>
+  );
+}
+```
+
+<br>
+
+* shortcut (지름길)   
+```
+function Btn({text}) {
+  return (
+    <button>{text}</button>
+  );
+}
+```
