--- a/React 영화 웹 서비스/4강/4강.md
+++ b/React 영화 웹 서비스/4강/4강.md
@@ -13,9 +13,29 @@ function Btn(props) {
 
 * shortcut (지름길)   
 ```
-function Btn({text}) {
+function Btn({ text }) {
   return (
     <button>{text}</button>
+  );
+}
+```
+
+<br>
+
+### 2. props와 이벤트리스너
+```
+function Btn(props) {
+  return (
+    <button onClick={chnageValue}>  // 이벤트리스너
+      {props.text}
+    </button>
+  );
+}
+function App() {
+  return (
+    <div>
+      <Btn text={value} onClick={changeValue} />  // props
+    </div>
   );
 }
 ```
