--- a/React 영화 웹 서비스/4강/4강.md
+++ b/React 영화 웹 서비스/4강/4강.md
@@ -23,7 +23,9 @@ function Btn({ text }) {
 <br>
 
 ### 2. props와 이벤트리스너
-* props에 함수도 넘겨줄 수 있다   
+* props에 함수도 넘겨줄 수 있다
+   
+* props로 넘겨주기 위해선 return 내에도 이벤트리스너를 적어줘야 한다
 ```
 function Btn(props) {
   return (
