--- a/React 영화 웹 서비스/4강/4강.md
+++ b/React 영화 웹 서비스/4강/4강.md
@@ -42,3 +42,16 @@ function App() {
   );
 }
 ```
+
+<br>
+
+### 3. propType   
+* 특정 props의 타입을 지정할 수 있다   
+
+* 특정 props가 무조건 필요할 경우, ```isRequired```를 붙여준다   
+```
+Btn.propTypes = {
+  text: PropTypes.string,
+  fontSize: PropTypes.number.isRequired,
+}
+```
