--- a/React JS 마스터클래스/2강: styled-component/2강.md
+++ b/React JS 마스터클래스/2강: styled-component/2강.md
@@ -97,7 +97,104 @@ function App() {
 <br>
 
 ### 5. 애니메이션   
-* keyframes를 import 해오기
+* keyframes를 import 해오기   
 
+**Ex>**
 ```js
+import styled, { keyframes } from 'styled-components';
+
+const rotation = keyframes`
+  0% {
+    transform:rotate(0deg);
+    border-radius: 0px;
+  }
+  50% {
+    border-radius: 100px;
+  }
+  100% {
+    transform:rotate(360deg);
+    border-radius: 0px;
+  }
+`;
+
+const Box = styled.div`
+  width: 200px;
+  height: 200px;
+  background-color: tomato;
+  animation: ${rotation} 2s linear infinite;
+`;
+
+function App() {
+  return (
+    <>
+      <Box />
+    </>
+  );
+}
+```
+
+<br>
+
+### 5-1. 하위 요소(태그)에 스타일 적용   
+* 하위 요소 span 태그에 스타일 적용   
+   
+* 모든 요소를 컴포넌트로 만들어줄 필요가 없음   
+   
+**Ex>**
+```js
+const Box = styled.div`
+  width: 200px;
+  height: 200px;
+  background-color: tomato;
+  span {
+    font-size: 36px;
+    &:hover {
+      font-size: 50px;
+    }
+    &:active {
+      opacity: 0;
+    }
+  }
+`;
+
+function App() {
+  return (
+    <>
+      <Box>
+        <span>Hello</span>
+      </Box>
+    </>
+  );
+}
+```
+
+<br>
+
+### 5-2. 하위 요소(컴포넌트)에 스타일 적용   
+* 하위 컴포넌트 Text에 스타일 적용   
+   
+**Ex>**
+```js
+const Text = styled.span`
+  font-size: 36px;
+`;
+
+const Box = styled.div`
+  width: 200px;
+  height: 200px;
+  background-color: tomato;
+  ${Text}:hover {
+    font-size: 50px;
+  }
+`;
+
+function App() {
+  return (
+    <>
+      <Box>
+        <Text>Hello</Text>
+      </Box>
+    </>
+  );
+}
 ```
