--- a/React JS 마스터클래스/2강: styled-component/2강.md
+++ b/React JS 마스터클래스/2강: styled-component/2강.md
@@ -95,6 +95,7 @@ function App() {
 ```
 
 <br>
+<br>
 
 ### 5. 애니메이션   
 * keyframes를 import 해오기   
@@ -195,6 +196,66 @@ function App() {
         <Text>Hello</Text>
       </Box>
     </>
+  );
+}
+```
+
+<br>
+<br>
+
+### 6. themeProvider   
+* theme을 통해 공통 스타일 적용   
+
+* 다크모드/라이트모드를 변경하기 위해선 동일한 property를 가져야 함
+
+**index.js**   
+```js
+import React from 'react';
+import ReactDOM from 'react-dom/client';
+import { ThemeProvider } from 'styled-components';
+import App from './App';
+
+const darkTheme = {
+  textColor:"whitesmoke",
+  backgroundColor:"#111",
+}
+const lightTheme = {
+  textColor:"#111",
+  backgroundColor:"whitesmoke",
+}
+
+const root = ReactDOM.createRoot(document.getElementById('root'));
+root.render(
+  <React.StrictMode>
+    <ThemeProvider theme={darkTheme}>
+      <App />
+    </ThemeProvider>
+  </React.StrictMode>
+);
+```
+
+<br>
+
+**App.js**   
+```js
+const Wrapper = styled.div`
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  height: 100vh;
+  width: 100vw;
+  background-color: ${(props) => props.theme.backgroundColor};
+`;
+
+const Title = styled.h1`
+  color: ${(props) => props.theme.textColor};
+`;
+
+function App() {
+  return (
+    <Wrapper>
+      <Title>Hello</Title>
+    </Wrapper>
   );
 }
 ```
