--- a/React JS 마스터클래스/3강: TypeScript/3강.md
+++ b/React JS 마스터클래스/3강: TypeScript/3강.md
@@ -6,3 +6,91 @@
 
 <br>
 
+### 2. 사용법   
+* 타입: ```string```, ```number```, ```boolean```, ```null```, ```undefined```, ```bigint```, ```[]```, ```{}``` 등
+     
+```ts
+let name :타입 = 'Kim';
+```
+
+<br>
+
+**Ex> 배열**   
+```ts
+let arr :string[] = ['Kim', 'Park'];
+```
+
+<br>
+
+**Ex> 객체**
+* ```?```는 name 속성이 들어올 수도 있고, 아닐 수도 있음   
+
+```ts
+let arr :{ name?: string } = { name: 'Kim' }
+```
+
+<br>
+
+**Ex> Union type**   
+* 다양한 타입이 들어올 수 있음    
+
+```ts
+let name :string[] | number = 123;
+```
+
+<br>
+
+**Ex> 함수 타입 지정**   
+```ts
+function solution(x: 인자 타입) :리턴값 타입 {
+  return x * 2;
+}
+```
+
+<br>
+<br>
+
+### 3. 타입 (Type alias)   
+* 타입명 : 대문자   
+
+```ts
+type Name = string | number;
+
+let a :Name = 123;
+```
+
+<br>
+
+**Ex> array에 쓸 수 있는 tuple타입**
+* 무조건 각 인덱스에 정해진 타입 값이 들어와야 한다   
+
+```ts
+type Member = [number, boolean];
+
+let john :Member = [123, true];
+```
+
+<br>
+
+**Ex> object에 타입지정해야 할 속성이 많을 경우**   
+* key의 타입이 string인 모든 속성들의 value의 타입은 string이어야 한다
+   
+```ts
+type Member = {
+  [key :string] : string,
+}
+let john : Member = { name: 'Kim', age: '123' }
+```
+
+<br>
+
+**Ex> class 타입 지정**
+
+```ts
+class User {
+ name :string;  // 타입 지정
+ constructor(name :string) {
+  this.name = name;
+ }
+}
+```
