--- a/React JS 마스터클래스/3강: TypeScript/3강.md
+++ b/React JS 마스터클래스/3강: TypeScript/3강.md
@@ -1,12 +1,12 @@
-## 3강 : TypeScript   
-### 1. 타입스크립트
+# 3강 : TypeScript   
+## 1. 타입스크립트
 * strongly-typed 언어
 
   * 프로그래밍 언어가 작동하기 전에 type을 확인
 
 <br>
 
-### 2. 사용법   
+## 2. 사용법   
 * 타입: ```string```, ```number```, ```boolean```, ```null```, ```undefined```, ```bigint```, ```[]```, ```{}``` 등
      
 ```ts
@@ -43,14 +43,14 @@ let name :string[] | number = 123;
 **Ex> 함수 타입 지정**   
 ```ts
 function solution(x: 인자 타입) :리턴값 타입 {
-  return x * 2;
+    return x * 2;
 }
 ```
 
 <br>
 <br>
 
-### 3. 타입 (Type alias)   
+## 3. 타입 (Type alias)   
 * 타입명 : 대문자   
 
 ```ts
@@ -77,7 +77,7 @@ let john :Member = [123, true];
    
 ```ts
 type Member = {
-  [key :string] : string,
+    [key :string] : string,
 }
 let john : Member = { name: 'Kim', age: '123' }
 ```
@@ -88,9 +88,64 @@ let john : Member = { name: 'Kim', age: '123' }
 
 ```ts
 class User {
- name :string;  // 타입 지정
- constructor(name :string) {
-  this.name = name;
- }
+    name :string;  // 타입 지정
+    constructor(name :string) {
+        this.name = name;
+    }
+}
+```
+
+<br>
+<br>
+
+## 4. 인터페이스 (interface)
+* interface: 같은 모양의 타입들을 정의하는 역할   
+
+```ts
+interface 이름 {
+    속성: 타입;
+}
+```
+
+<br>
+
+### Ex>
+**Circle.tsx**
+```ts
+interface ContainerProps {
+  bgColor: string;
+  borderColor: string;
+}
+// borderColor 선택 가능
+interface CircleProps {
+  bgColor: string;
+  borderColor?: string;  // optional props
+}
+
+const Container = styled.div<ContainerProps>`
+  width: 200px;
+  height: 200px;
+  background-color: ${(props) => props.bgColor};
+  border-radius: 100px;
+  border: 1px solid ${props => props.borderColor};
+`;
+
+// borderColor가 undefined일때 배경색으로 설정
+function Circle({ bgColor, borderColor }: CircleProps) {
+  return <Container bgColor={bgColor} borderColor={borderColor ?? bgColor} />
+}
+```
+
+**App.tsx**
+```tsx
+import Circle from './Circle';
+
+function App() {
+  return (
+    <div>
+      <Circle bgColor='teal' borderColor='blue' />
+      <Circle bgColor='tomato' />
+    </div>
+  );
 }
 ```
