--- a/React JS 마스터클래스/3강: TypeScript/3강.md
+++ b/React JS 마스터클래스/3강: TypeScript/3강.md
@@ -49,6 +49,7 @@ function solution(x: 인자 타입) :리턴값 타입 {
 
 <br>
 <br>
+<hr>
 
 ## 3. 타입 (Type alias)   
 * 타입명 : 대문자   
@@ -97,6 +98,7 @@ class User {
 
 <br>
 <br>
+<hr>
 
 ## 4. 인터페이스 (interface)
 * interface: 같은 모양의 타입들을 정의하는 역할   
@@ -145,6 +147,48 @@ function App() {
     <div>
       <Circle bgColor='teal' borderColor='blue' />
       <Circle bgColor='tomato' />
+    </div>
+  );
+}
+```
+
+<br>
+<br>
+<hr>
+
+
+## 5. Form 태그
+* React.FormEvent<HTMLFormElement>   
+   
+```ts
+import React, { useState } from 'react';
+
+function App() {
+  const [name, setName] = useState("")
+  const onChange = (event :React.FormEvent<HTMLInputElement>) => {
+    const {
+      currentTarget: { value },
+    } = event;
+    setName(value);
+  };
+
+  const onSubmit = (event :React.FormEvent<HTMLFormElement>) => {
+    event.preventDefault();
+
+    console.log(`hello ${name}`);
+  };
+
+  return (
+    <div>
+      <form onSubmit={onSubmit}>
+        <input
+          value={name}
+          onChange={onChange}
+          type='text'
+          placeholder='username'
+        />
+        <button>Log in</button>
+      </form>
     </div>
   );
 }
