--- a/React JS 마스터클래스/3강: TypeScript/3강.md
+++ b/React JS 마스터클래스/3강: TypeScript/3강.md
@@ -158,7 +158,7 @@ function App() {
 
 
 ## 5. Form 태그
-* React.FormEvent<HTMLFormElement>   
+* ```React.FormEvent<HTMLFormElement>```   
    
 ```ts
 import React, { useState } from 'react';
