--- a/React JS 마스터클래스/3강: TypeScript/3강.md
+++ b/React JS 마스터클래스/3강: TypeScript/3강.md
@@ -193,3 +193,82 @@ function App() {
   );
 }
 ```
+
+<br>
+<br>
+<hr>
+
+## 6. ThemeProvider   
+**index.tsx**
+```tsx
+import React from 'react';
+import ReactDOM from 'react-dom/client';
+import { ThemeProvider } from 'styled-components';
+import App from './App';
+import { darkTheme, lightTheme } from './theme';
+
+const root = ReactDOM.createRoot(
+  document.getElementById('root') as HTMLElement
+);
+root.render(
+  <React.StrictMode>
+    <ThemeProvider theme={darkTheme}>
+      <App />
+    </ThemeProvider>
+  </React.StrictMode>
+);
+```
+
+**App.tsx**
+```tsx
+import styled from 'styled-components';
+
+const Container = styled.div`
+  background-color: ${(props) => props.theme.bgColor};
+`;
+const H1 = styled.h1`
+  color: ${(props) => props.theme.textColor};
+`;
+
+function App() {
+
+  return (
+    <Container>
+      <H1>protected</H1>
+    </Container>
+  );
+}
+
+export default App;
+```
+
+**styled.d.ts**
+```ts
+// import original module declarations
+import 'styled-components';
+
+// and extend them!
+declare module 'styled-components' {
+    export interface DefaultTheme {
+        textColor: string;
+        bgColor: string;
+        btnColor: string;
+    }
+}
+```
+
+**theme.ts**
+```ts
+import { DefaultTheme } from 'styled-components';
+
+export const lightTheme:DefaultTheme = {
+    bgColor: 'white',
+    textColor: 'black',
+    btnColor: 'tomato',
+}
+export const darkTheme:DefaultTheme = {
+    bgColor: 'black',
+    textColor: 'white',
+    btnColor: 'teal',
+}
+```
