--- a/React 영화 웹 서비스/4강/4강.md
+++ b/React 영화 웹 서비스/4강/4강.md
@@ -29,7 +29,7 @@ function Btn({ text }) {
 ```
 function Btn(props) {
   return (
-    <button onClick={chnageValue}>  // 이벤트리스너
+    <button onClick={changeValue}>  // 이벤트리스너
       {props.text}
     </button>
   );
